; ModuleID = '/home/carl/AnghaBench/linux/net/tipc/extr_name_table.c_tipc_publ_create.c'
source_filename = "/home/carl/AnghaBench/linux/net/tipc/extr_name_table.c_tipc_publ_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.publication = type { i32, i32, i32, i32, i8*, i8*, i8*, i8*, i8*, i8*, i8* }

@GFP_ATOMIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.publication* (i8*, i8*, i8*, i8*, i8*, i8*, i8*)* @tipc_publ_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.publication* @tipc_publ_create(i8* %0, i8* %1, i8* %2, i8* %3, i8* %4, i8* %5, i8* %6) #0 {
  %8 = alloca %struct.publication*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca %struct.publication*, align 8
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i8* %4, i8** %13, align 8
  store i8* %5, i8** %14, align 8
  store i8* %6, i8** %15, align 8
  %17 = load i32, i32* @GFP_ATOMIC, align 4
  %18 = call %struct.publication* @kzalloc(i32 72, i32 %17)
  store %struct.publication* %18, %struct.publication** %16, align 8
  %19 = load %struct.publication*, %struct.publication** %16, align 8
  %20 = icmp ne %struct.publication* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %7
  store %struct.publication* null, %struct.publication** %8, align 8
  br label %57

22:                                               ; preds = %7
  %23 = load i8*, i8** %9, align 8
  %24 = load %struct.publication*, %struct.publication** %16, align 8
  %25 = getelementptr inbounds %struct.publication, %struct.publication* %24, i32 0, i32 10
  store i8* %23, i8** %25, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load %struct.publication*, %struct.publication** %16, align 8
  %28 = getelementptr inbounds %struct.publication, %struct.publication* %27, i32 0, i32 9
  store i8* %26, i8** %28, align 8
  %29 = load i8*, i8** %11, align 8
  %30 = load %struct.publication*, %struct.publication** %16, align 8
  %31 = getelementptr inbounds %struct.publication, %struct.publication* %30, i32 0, i32 8
  store i8* %29, i8** %31, align 8
  %32 = load i8*, i8** %12, align 8
  %33 = load %struct.publication*, %struct.publication** %16, align 8
  %34 = getelementptr inbounds %struct.publication, %struct.publication* %33, i32 0, i32 7
  store i8* %32, i8** %34, align 8
  %35 = load i8*, i8** %13, align 8
  %36 = load %struct.publication*, %struct.publication** %16, align 8
  %37 = getelementptr inbounds %struct.publication, %struct.publication* %36, i32 0, i32 6
  store i8* %35, i8** %37, align 8
  %38 = load i8*, i8** %14, align 8
  %39 = load %struct.publication*, %struct.publication** %16, align 8
  %40 = getelementptr inbounds %struct.publication, %struct.publication* %39, i32 0, i32 5
  store i8* %38, i8** %40, align 8
  %41 = load i8*, i8** %15, align 8
  %42 = load %struct.publication*, %struct.publication** %16, align 8
  %43 = getelementptr inbounds %struct.publication, %struct.publication* %42, i32 0, i32 4
  store i8* %41, i8** %43, align 8
  %44 = load %struct.publication*, %struct.publication** %16, align 8
  %45 = getelementptr inbounds %struct.publication, %struct.publication* %44, i32 0, i32 3
  %46 = call i32 @INIT_LIST_HEAD(i32* %45)
  %47 = load %struct.publication*, %struct.publication** %16, align 8
  %48 = getelementptr inbounds %struct.publication, %struct.publication* %47, i32 0, i32 2
  %49 = call i32 @INIT_LIST_HEAD(i32* %48)
  %50 = load %struct.publication*, %struct.publication** %16, align 8
  %51 = getelementptr inbounds %struct.publication, %struct.publication* %50, i32 0, i32 1
  %52 = call i32 @INIT_LIST_HEAD(i32* %51)
  %53 = load %struct.publication*, %struct.publication** %16, align 8
  %54 = getelementptr inbounds %struct.publication, %struct.publication* %53, i32 0, i32 0
  %55 = call i32 @INIT_LIST_HEAD(i32* %54)
  %56 = load %struct.publication*, %struct.publication** %16, align 8
  store %struct.publication* %56, %struct.publication** %8, align 8
  br label %57

57:                                               ; preds = %22, %21
  %58 = load %struct.publication*, %struct.publication** %8, align 8
  ret %struct.publication* %58
}

declare dso_local %struct.publication* @kzalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
